--- a/tutorial/src/benchmark_experiments.Rmd
+++ b/tutorial/src/benchmark_experiments.Rmd
@@ -1,5 +1,56 @@
 # Benchmark Experiments
 
+compare the performance of several learners on multiple data sets
+
+function [&benchmark]
+
+
+### Example 1: Two tasks and two learners
+
+```{r eval=FALSE}
+## Two learners to be compared
+lrns = list(makeLearner("classif.lda"), makeLearner("classif.rpart"))
+
+## Two classification tasks
+tasks = list(iris.task, bc.task)
+
+## Define cross-validation indices
+rdesc = makeResampleDesc("CV", iters = 5)
+
+## Benchmark experiment
+res = benchmark(lrns, tasks, rdesc)
+res
+```
+
+The above code should be self-explanatory. In the result every row corresponds to one [&Task]
+set with one [Learner](&makeLearner).
+In the printed table tasks and learners are referred to by their ids.
+
+
+The entries show the cross-validated mean misclassification error.
+
+[&BenchmarkResult]
+The benchmark results contain much more information, which you can
+access if you want to see details. Let's have a look at the benchmark
+result from the example above:
+
+```{r eval=FALSE}
+## Individual performances of the 5 cross-validation runs
+getPerformances(res)
+
+## Aggregated performances
+getAggrPerformances(res)
+
+## Predictions
+pred = getPredictions(res)
+head(pred$`iris-example`)
+```
+Note that the task ids are used to name the elements of ``pred``.
+
+
+
+## Nested resampling
+
 In order to get an unbiased estimate of the performance on new data,
 it is generally not enough to simply use repeated cross-validation
 for a given set of hyperparameters and methods (see section [tuning](tune.md)),
@@ -20,145 +71,86 @@ data. These can now be used to estimate locations (e.g. of the mean
 or median performance value) and compare learning methods in a fair
 way.
 
-In the following we will see four examples to show different benchmark settings:
+In the following we will see three examples to show different benchmark settings:
 
-* One data set + two classification algorithms
 * One data set + one classification algorithm + tuning
-* Three data sets + three classification algorithms + tuning
+* Three data sets + two classification algorithms + tuning
 * One data set + two classification algorithms + variable selection
 
 
-## Example 1: One task, two learners, no tuning
-
-```{r eval=FALSE}
-## Classification task with iris data set
-task = makeClassifTask(data = iris, target = "Species")
-
-## Two learners to be compared
-learners = c("classif.lda", "classif.qda")
-
-## Define cross-validation indices
-rdesc = makeResampleDesc("CV", iters = 5)
-
-res = bench.exp(learners, task, rdesc)
-```
-
-The above code should be self-explanatory. In the result every
-column corresponds to one learner. The entries show the mean test
-error and its standard deviation for the final fitted model.
-
-But the benchmark results contain much more information, which you can
-access if you want to see details. Let's have a look at the benchmark
-result from the example above:
-
-
-```{r eval=FALSE}
-## Access further information
-## The single performances of the cross-validation runs
-res["perf"]
-
-## Confusion matrices - one for each learner
-res["conf.mats"]
-```
-
 ## Example 2: One task, one learner, tuning
 
-Now we have a learner with hyperparameters and we want to find the best ones. In
+Now we have a [Learner](&makeLearner) with hyperparameters and we want to find the best ones. In
 that case we have two resampling levels.
 
 We show an example with outer bootstrap and inner cross-validation,
-our learner will be k-nearest neighbour.
+our [Learner](&makeLearner) will be k-nearest neighbour.
 
 ```{r eval=FALSE}
-## Classification task with iris data set
-task = makeClassifTask(data = iris, target = "Species")
-
 ## Range of hyperparameter k
-ps = makeParameterSet(makeDiscreteParameter("k", 1:5))
-ctrl = makeTuneControlGrid(ranges = ps)
+ps = makeParamSet(makeDiscreteParam("k", 1:5))
+ctrl = makeTuneControlGrid()
 
 ## Define "inner" cross-validation indices
 inner.rdesc = makeResampleDesc("CV", iters = 3)
 
-## Tune k-nearest neighbour
-lrn = makeTuneWrapper("classif.kknn",
-                               resampling = inner.rdesc,
-                               control = ctrl)
+## Tune k-nearest neighbor
+lrn = makeTuneWrapper("classif.kknn", resampling = inner.rdesc, par.set = ps, control = ctrl)
 
 ## Define "outer" bootstrap indices
-rdesc = makeResampleDesc("BS", iters = 5)
+rdesc = makeResampleDesc("Bootstrap", iters = 5)
 
 ## Merge it into a benchmark experiment
 ## Choose accuracy instead of default measure mean misclassification error
-res = bench.exp(lrn, task, rdesc, measure = acc)
-
-## What performances did we get in the single runs?
-res["perf"]
+res = benchmark(lrn, iris.task, rdesc, measure = acc)
 
 ## What parameter setting achieved this performances?
-res["tuned.par"]
+getTuneResult(res)
 
-## What does the confusion matrix look like?
-res["conf.mats"]
+## What performances did we get in the single runs?
+getPerformances(res)
 ```
 
 Of course everything works the same way if we change the resampling
 strategy either in the outer or inner run. They can be mixed as desired.
 
-## Example 3: Three tasks, three learners, tuning
+## Example 3: Two tasks, three learners, tuning
 
-Now we look at an extensive example that shows a benchmark experiment with three data
-sets, three learners and tuning.
+Now we look at an extensive example that shows a benchmark experiment with two data
+sets, three [Learners](&makeLearner) and [tuning](&tune.md).
 
 ```{r eval=FALSE}
-library("dprep")
-data(BreastCancer, package = "mlbench")
-data(Vehicle, package = "mlbench")
-
-## Classification task with three data sets
-task1 = makeClassifTask("Iris", data = iris, target = "Species")
-task2 = makeClassifTask("Vehicle", data = Vehicle, target = "Class")
-task3 = makeClassifTask("BreastCancer", data = na.omit(BreastCancer),
-                         target = "Class", excluded = "Id")
-
-## Merge to one task
-tasks = list(task1 , task2 , task3)
+## List of learning tasks
+tasks = list(iris.task, bc.task)
 
 ## Very small grid for SVM hyperparameters
-ps = makeParameterSet(makeDiscreteParameter("C", 2^seq(-1,1)),
-                      makeDiscreteParameter("sigma", 2^seq(-1,1)))
-ctrl = makeTuneControlGrid(ranges = ps)
+ps = makeParamSet(makeDiscreteParam("C", 2^seq(-1,1)),
+    makeDiscreteParam("sigma", 2^seq(-1,1)))
+ctrl = makeTuneControlGrid()
 
 ## Define "inner" cross-validation indices
 inner.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune a SVM
-lrn = makeTuneWrapper("classif.ksvm", method = "grid", resampling = inner.rdesc,
-                       control = ctrl)
+lrn = makeTuneWrapper("classif.ksvm", resampling = inner.rdesc, par.set = ps, control = ctrl)
 
 ## Three learners to be compared
-learners = c("classif.lda", "classif.rpart", lrn)
+lrns = list(makeLearner("classif.lda"), makeLearner("classif.rpart"), lrn)
 
 ## Define "outer" cross-validation indices
 rdesc = makeResampleDesc("CV", iters = 5)
 
 ## Merge it to a benchmark experiment
-res = bench.exp(learners, tasks, rdesc)
+res = benchmark(lrns, tasks, rdesc)
 
 ## Only for one task
-res["perf", task = "Iris"]
-
-## Only for one learner
-res["perf", learner = "classif.lda"]
+getPerformances(res)
 
 ## Tuned parameter for SVM
-res["tuned.par", learner = "classif.ksvm"]
+getTuneResult(res)
 
-## Confusion matrix for one learner and one task
-res["conf.mats", learner = "classif.rpart", task = "BreastCancer"]
-
-## Optimal performance of the inner (!) resampling, i.e. here 3-fold cross-validation
-res["opt.perf", learner = "classif.ksvm"]
+## Optimal performance of the inner (!) resampling, i.e., here 3-fold cross-validation
+#res["opt.perf", learner = "classif.ksvm"]
 ```
 
 ## Example 4: One task, two learners, variable selection
@@ -167,27 +159,27 @@ Let's see how we can do [feature selection](feature_selection.md) in
 a benchmark experiment:
 
 ```{r eval=FALSE}
-## Classification task with iris data set
-task = makeClassifTask("iris", data=iris, target = "Species")
-
 ## Control object for feature selection
-ctrl = makeFeatselControlSequential(beta = 100, method="sfs")
+ctrl = makeFeatSelControlSequential(beta = 100, method = "sfs")
 
 ## Inner resampling
-inner.rdesc = makeResampleDesc("CV", iter=2)
+inner.rdesc = makeResampleDesc("CV", iter = 2)
 
-## Feature selection with Sequential Forward Search
-lrn = makeFeatselWrapper("classif.lda", resampling = inner.rdesc, control = ctrl)
+## Feature selection with sequential forward search (sfs)
+lrn = makeFeatSelWrapper("classif.lda", resampling = inner.rdesc, control = ctrl)
 
 ## Let's compare two learners
-learners = c("classif.rpart", lrn)
+lrns = list(makeLearner("classif.rpart"), lrn)
 
 ## Define outer resampling
-rdesc = makeResampleDesc("subsample", iter = 3)
+rdesc = makeResampleDesc("Subsample", iter = 3)
 
-## Merge to a benchmark experiment
-res = bench.exp(tasks = task, learners = learners, resampling = rdesc)
+## Benchmark experiment
+res = benchmark(tasks = iris.task, learners = lrns, resampling = rdesc)
 
 ## Which features have been selected (in the outer resampling steps)?
-res["sel.var", learner="classif.lda"]
+getFeatSelResult(res)
+
+## Performances on individual test data sets
+getPerformances(res)
 ```
