--- a/tutorial/src/predict.Rmd
+++ b/tutorial/src/predict.Rmd
@@ -1,131 +1,133 @@
 # Predicting Outcomes for New Data
 
 Predicting the target values for new observations is
-implemented the same way as most of the other predict methods in *R*.
-In general, all you need to do is
-call [predict](&predict.WrappedModel) on the object returned by [&train]
-and pass the data to be predicted.
+implemented the same way as most of the other predict methods in **R**.
+In general, all you need to do is call [predict](&predict.WrappedModel) on the object
+returned by [&train] and pass the data to be predicted.
 
+There are two possibilities to pass the data.
 
-## Quick start
+* Either pass the [&Task] via the ``task`` argument
+* or pass a ``data.frame`` via the ``newdata`` argument.
 
-### Classification example
-
-Let's train a Linear Discriminant Analysis on the ``iris`` data and make predictions
-for the same data set.
+The first way is preferable if you want predictions for data already included in the [&Task].
+Just as [&train], the [predict](&predict.WrappedModel) function has a ``subset`` argument,
+so you can set aside different portions of the data in [&Task] for training and prediction.
+In the following example we fit a [gradient boosting machine](&gbm::gbm) to every second
+observation of the [BostonHousing](&mlbench::BostonHousing) data set and make predictions
+on the remaining data.
 
 ```{r}
-task = makeClassifTask(data = iris, target = "Species")
-lrn = makeLearner("classif.lda")
-mod = train(lrn, task = task)
-pred = predict(mod, newdata = iris)
+n = bh.task$task.desc$size
+train.set = seq(1, n, 2)
+test.set = seq(2, n, 2)
+lrn = makeLearner("regr.gbm", n.trees = 100)
+mod = train(lrn, bh.task, subset = train.set)
+
+task.pred = predict(mod, task = bh.task, subset = test.set)
+task.pred
+```
+
+The second way is useful if you want to predict data not included in the [&Task].
+In the following we cluster the ``iris`` data set without the target variable.
+All observations with an odd index are included in the [&Task] and used for training.
+Predictions are made for the remaining observations.
+
+```{r}
+n = nrow(iris)
+train.set = seq(1, n, 2)
+test.set = seq(2, n, 2)
+task = makeClusterTask(data = iris[train.set,-5])
+mod = train("cluster.XMeans", task)
+
+newdata.pred = predict(mod, newdata = iris[,-5], subset = test.set)
+newdata.pred
+```
+
+The result of [predict](&predict.WrappedModel) naturally depends on the nature of the [&Task]
+and the type of prediction chosen when creating the [Learner](&makeLearner).
+For example in case of survival analysis the default is to predict the response.
+For the [Cox proportional hazards model](&Surv::coxph) we get the values of the linear
+predictor as shown in the following.
+
+```{r}
+n = lung.task$task.desc$size
+train.set = seq(1, n, 2)
+test.set = seq(2, n, 2)
+mod = train("surv.coxph", lung.task, subset = train.set)
+
+pred = predict(mod, task = lung.task, subset = test.set)
 pred
 ```
 
-
-### Regression example
-
-We fit a simple linear regression model to the ``BostonHousing`` data set and predict
-on the training data.
+It is also possible to predict time-dependent probabilities.
+In order to do so you have to create a [Learner](&makeLearner) and set ``predict.type = "prob"``.
 
 ```{r}
-data(BostonHousing, package = "mlbench")
+lrn = makeLearner("surv.coxph", predict.type = "prob")
+mod = train(lrn, lung.task, subset = train.set)
 
-task = makeRegrTask(data = BostonHousing, target = "medv")
-lrn = makeLearner("regr.lm")
-mod = train(lrn, task)
-predict(mod, newdata = BostonHousing)
+pred = predict(mod, task = lung.task, subset = test.set)
+head(pred$data[,1:8])
 ```
 
-### Clustering example
+Predictions are encapsulated in a special [&Prediction] object.
 
-We cluster the ``iris`` data set without the target variable and predict using
-the same data.
+
+## Accessing the prediction
+
+A [&Prediction] object is a ``list``. The most important element is ``"data"`` which is a
+``data.frame`` that contains columns with the true values of the target variable (in case of
+supervised learning problems) and the predictions.
+
+In the following the predictions on the [BostonHousing](&mlbench::BostonHousing) and the
+[iris](&datasets::iris) data sets are shown.
 
 ```{r}
-task = makeClusterTask(data = iris[,-5])
-lrn = makeLearner("cluster.XMeans")
-mod = train(lrn, task)
-predict(mod, newdata = iris[,-5])
+head(task.pred$data)
+
+head(newdata.pred$data)
 ```
 
+As you can see when predicting from a [&Task], the resulting ``data.frame`` contains an
+additional column, called ``id``, which tells us which element in the original data set
+the prediction corresponds to.
 
-## Further information
-
-There are several possibilities to pass the observations for which to make
-predictions.
-The first possibility is via the ``newdata`` argument and was already shown in the
-examples above.
-If the data for which predictions are required are already contained in
-the [Learner](&makeLearner), it is also possible to pass the task and optionally specify
-the subset argument that contains the indices of the test observations.
-
-Predictions are encapsulated in a special [&Prediction] object. The available
-accessors are documented in the man page for [&Prediction].
+In case of classification problems there are some more functions to access the [&Prediction].
 
 
-### Classification example
+### Classification
 
-In case of a classification task, the result of
-[predict](&predict.WrappedModel) depends on the predict type, which was set
-when generating the [Learner](&makeLearner). The default is to predict class
-labels.
-
-We start again by loading **mlr** and creating a classification task for the
-``iris`` data set. We select two subsets of the data. We train a decision tree on the
-first one and predict the class labels on the test set.
+In case of classification, per default, class labels are predicted.
 
 ```{r}
-# Define the classification task
-task = makeClassifTask(data = iris, target = "Species")
+## Linear discriminant analysis on the iris data set
+mod = train("classif.lda", task = iris.task)
 
-# Define the learning algorithm
-lrn = makeLearner("classif.rpart")
-
-# Split the iris data into a training set for learning and a test set
-training.set = seq(from = 1, to = nrow(iris), by = 2)
-test.set = seq(from = 2, to = nrow(iris), by = 2)
-
-# Now, we can train a decision tree using only the observations in train.set
-mod = train(lrn, task, subset = training.set)
-
-# Finally, predict the label on new values using the predict method
-pred = predict(mod, newdata = iris, subset = test.set)
+pred = predict(mod, task = iris.task)
+pred
 ```
 
-A `data.frame` that contains the true and predicted class labels can be accessed via
-
+A confusion matrix can be obtained by calling [&getConfMatrix].
 ```{r}
-head(pred$data)
+getConfMatrix(pred)
 ```
 
-Alternatively, we can also predict directly from a `task`:
-
-```{r}
-pred = predict(mod, task = task, subset = test.set)
-head(as.data.frame(pred))
-```
-
-When predicting from a `task`, the resulting `data.frame` contains an additional column,
-called *ID*, which tells us which element in the original data set the prediction
-corresponds to. In the iris example the IDs and the rownames coincide.
-
-In order to get predicted posterior probabilities, we have to change the ``predict.type``
-of the learner.
+In order to get predicted posterior probabilities we have to create a [Learner](&makeLearner)
+with the appropriate ``predict.type``.
 
 ```{r}
 lrn = makeLearner("classif.rpart", predict.type = "prob")
-mod = train(lrn, task)
-pred = predict(mod, newdata = iris, subset = test.set)
+mod = train(lrn, iris.task)
+
+pred = predict(mod, newdata = iris)
 head(pred$data)
 ```
 
-As you can see, in addition to the predicted probabilities, a response
-is produced by choosing the class with the maximum probability and
-breaking ties at random.
+As you can see, in addition to the probabilities, class labels are predicted
+by choosing the class with the maximum probability and breaking ties at random.
 
 The predicted posterior probabilities can be accessed via the [&getProbabilities] function.
-
 ```{r}
 head(getProbabilities(pred))
 ```
@@ -134,56 +136,82 @@ head(getProbabilities(pred))
 ### Binary classification
 
 In case of binary classification, two things are worth mentioning. As you may recall,
-we can specify a positive class when generating the task. Moreover, we can set the
-threshold value that is used to assign class labels based on the predicted
-posteriors.
-
-To illustrate binary classification, we use the Sonar data set from the
-[mlbench](http://cran.r-project.org/web/packages/mlbench/index.html) package.
-Again we create a classification task and a learner which predicts
-probabilities, train the learner and then predict the class labels based on the
+we can specify which of the two classes should be considered as positive class when
+generating the [&Task]. Moreover, we can set the threshold value that is used 
+to map the predicted posterior probabilities to class labels.
+Note that for this purpose we need to create a [Learner](&makeLearner) that predicts
 probabilities.
 
-```{r}
-data(Sonar, package = "mlbench")
+To illustrate binary classification, we use the [BreastCancer](&mlbench::BreastCancer)
+data set from the
+[mlbench](http://cran.r-project.org/web/packages/mlbench/index.html) package.
 
-task = makeClassifTask(data = Sonar, target = "Class", positive = "M")
+```{r}
 lrn = makeLearner("classif.rpart", predict.type = "prob")
-mod = train(lrn, task = task)
-pred = predict(mod, task = task)
-head(pred$data)
-```
+mod = train(lrn, task = bc.task)
 
-In a binary classification setting, we can adjust the threshold, used
-to map probabilities to class labels using [&setThreshold]. Here, we set
-the threshold for the *positive* class to 0.8:
-
-```{r}
-pred = setThreshold(pred, 0.8)
-head(pred$data)
+pred = predict(mod, task = bc.task)
+pred
 pred$threshold
 ```
 
+As you can see the default threshold is 0.5, that is an example is assigned to the class
+with maximum posterior probability.
 
-### Regression example
-
-We again use the BostonHousing data set and learn a Gradient Boosting Machine
-model. We take all observations with an odd index as training and all
-observations with an even index as test. The procedure is the same as in the
-classification case.
+We can adjust the threshold used using the function [&setThreshold].
+Now, we set the threshold for the *positive* class to 0.8 (that is, an example is assigned
+to the positive class if its posterior probability exceeds 0.8):
 
 ```{r}
-data(BostonHousing, package = "mlbench")
+pred = setThreshold(pred, 0.8)
+pred
+pred$threshold
+```
 
-task = makeRegrTask(data = BostonHousing, target = "medv")
+Note that in the binary case [&getProbabilities] extracts the posterior probabilities
+of the positive class only.
 
-training.set = seq(from = 1, to = nrow(BostonHousing), by = 2)
-test.set = seq(from = 2, to = nrow(BostonHousing), by = 2)
+```{r}
+head(getProbabilities(pred))
+```
 
-lrn = makeLearner("regr.gbm", n.trees = 100)
-mod = train(lrn, task, subset = training.set)
 
-pred = predict(mod, newdata = BostonHousing, subset = test.set)
+## Visualizing the prediction
 
-head(pred$data)
+Function [&plotLearnerPrediction] allows to visualize predictions, e.g., for teaching purposes
+or exploring models.
+It trains the chosen learning method for 1 or 2 selected features and then displays the
+predictions via [ggplot](ggplot2::ggplot). 
+
+For *classification*, we get a scatterplot of 2 features (per default the first 2 in the data set).
+The plotting symbols show the true class labels of the data points.
+The color indicates misclassified observations.
+The posterior probabilities (if the learner under consideration supports this)
+are represented by the background color.
+
+The plot title displays the ID of the learner (in the following example CART),
+its parameters, its training performance and its cross-validation performance.
+[&mmce] stands for *mean misclassification error*, i.e., the error rate.
+See the sections about [assessing the performance of a learner](&performance.md) and
+[resampling](&resample.md) for further explanations.
+
+```{r}
+lrn = makeLearner("classif.rpart", id = "CART")
+plotLearnerPrediction(lrn, task = iris.task)
+```
+
+For *regression*, there exist two types of plots.
+The 1D plot shows the target values in dependence of 1 feature, the regression curve and
+potentially (if the chosen learner supports this) the estimated standard error.
+
+```{r}
+plotLearnerPrediction("regr.lm", features = "lstat", task = bh.task)
+```
+
+The 2D variant, as in the classification case, generates a scatterplot of 2 features.
+The estimated mean is shown via the background color.
+The plot does not represent the estimated standard error.
+
+```{r}
+plotLearnerPrediction("regr.lm", features = c("lstat", "rm"), task = bh.task)
 ```
