--- a/tutorial/src/resample.Rmd
+++ b/tutorial/src/resample.Rmd
@@ -7,177 +7,280 @@ library("rpart")
 # Resampling
 
 In order to assess the performance of a learning algorithm, resampling
-strategies are usually used. Resampling is a means of splitting the entire data
-set into training and tet. There are various methods for doing this, for example
+strategies are usually used. 
+The entire data set is split into (multiple) training and test sets.
+You train a learner on each training set, predict on the corresponding test set (sometimes
+on the training set as well) and calculate some performance measure.
+Then the individual performance values are aggregated, typically by calculating the mean.
+There exist various different resampling strategies, for example
 cross-validation and bootstrap, to mention just two popular approaches.
-In **mlr**, the [&resample] function, depending on the chosen resampling strategy,
-fits the selected learner using the corresponding training sets and performs
-predictions for the corresponding training/test sets and calculates the chosen
-performance measures.
 
+![Resampling Figure](../../../images/resampling.png "Resampling Figure")
 
-## Quick start
+In **mlr** the resampling strategy can be chosen via the function [&makeResampleDesc].
+The supported resampling strategies are:
 
-### Classification example
+* Cross-validation (``"CV"``),
+* Leave-one-out cross-validation (``"LOO""``),
+* Repeated cross-validation (``"RepCV"``),
+* Out-of-bag bootstrap (``"Bootstrap"``),
+* Subsampling (``"Subsample"``),
+* Holdout (training/test) (``"Holdout"``).
 
+The [&resample] function then evaluates the performance of a [Learner](&makeLEarner) using
+the specified resampling strategy for a given machine learning task.
+
+In the following example the performance of the
+[Cox proportional hazards model](&survival::coxph) on the 
+[lung](&survival::lung) data set is calculated using *3-fold cross-validation*.
+Generally, in *K-fold cross-validation* the data set *D* is partitioned into *K* subsets of
+(approximately) equal size.
+In the *i*-th step of the *K* iterations, the *i*-th subset is
+used as for testing, while the union of the remaining parts forms the training
+set.
+The default performance measure in survival analysis is the concordance index ([&cindex]).
 
 ```{r}
-## Define a learning task and an appropriate learner
-task = makeClassifTask(data = iris, target = "Species")
-lrn = makeLearner("classif.lda")
-
-## Perform a 3-fold cross-validation
+## Specify the resampling strategy (3-fold cross-validation)
 rdesc = makeResampleDesc("CV", iters = 3)
-r = resample(lrn, task, rdesc)
+
+## Calculate the performance
+r = resample("surv.coxph", lung.task, rdesc)
 r
 ```
 
-In this example, the peformance measure is [&mmce] (mean misclassification
-error), the default for classification. See the documentation for
-[&measures] for a complete list of performance measures available in **mlr**.
-More explanations, concerning the evaluation of learning methods, are given in
-section [Evaluating Learner Performance](performance.md).
+``r$measures.test`` gives the value of the performance measure on the 3 individual test
+data sets.
+``r$aggr`` shows the aggregated performance value.
+Its name ``"cindex.test.mean"`` indicates the performance measure, [&cindex], and the method used
+to aggregate the 3 individual performances.
+[&test.mean] is the default method and, as the name implies, takes the mean over the
+performances on the 3 test data sets.
+Since for cross-validation no predictions on the training data sets are necessary
+``r$measures.train`` contains ``NA``s.
 
+If predictions for the training set are required, too, ``predict = "train"``or ``predict = "both"``
+in [&makeResampleDesc]
+FIXME b632, b632+ bootstrap examples later.
 
-### Regression example
-
-As an example with regression, we use the ``BostonHousing`` data set again.
+``r$pred`` is an object of class [&ResamplePrediction].
+Just as a [&Prediction] object (see the section about [making predictions](&predict.md))
+``r$pred`` has an element called ``"data"`` which is a ``data.frame`` that contains the
+predictions and in case of a supervised learning problem the true values of the target
+variable.
 
 ```{r}
-data(BostonHousing, package = "mlbench")
+head(r$pred$data)
+```
 
-## Define a learning task and an appropriate learner
-task = makeRegrTask(data = BostonHousing, target = "medv")
-lrn = makeLearner("regr.lm")
+The columns ``iter`` and ``set``indicate the iteration of the resampling strategy and
+if the prediction was made on the test or the training data set.
 
-## Perform a 3-fold cross-validation
-rdesc = makeResampleDesc("CV", iters=3)
-r = resample(lrn, task, rdesc)
+
+In the above example the peformance measure is the concordance index ([&cindex]).
+Of course, it is  possible to compute multiple performance measures at once by 
+passing a list of measures
+(see also the previous section about [evaluating learner performance](performance.md)).
+
+In the following we estimate the Dunn index ([&dunn]), the Davies-Bouldin cluster
+separation measure ([&db]), and the time for training the learner ([&timetrain])
+by *subsampling* with 5 iterations.
+In each iteration the data set *D* is randomly partitioned into a
+training and a test set according to a given percentage, e.g., 2/3
+training and 1/3 test set. If there is just one iteration, the strategy
+is commonly called *holdout* or *test sample estimation*.
+
+```{r}
+## Subsampling with 5 iterations and default split 2/3
+rdesc = makeResampleDesc("Subsample", iters = 5)
+## Subsampling with 5 iterations and 4/5 splits
+rdesc = makeResampleDesc("Subsample", iters = 5, split = 4/5)
+
+## Calculate the three performance measures
+r = resample("cluster.XMeans", mtcars.task, rdesc, measures = list(dunn, db, timetrain))
 r
 ```
 
-For regression, the default performance measure is [&mse] (mean squared error).
+
+## Accessing individual learner models
+
+In each resampling iteration a [Learner](&makeLearner) is fitted on the respective training set.
+By default, the resulting [&WrappedModel]s are not returned by [&resample].
+If you want to keep them set ``models = TRUE``.
+
+```{r}
+## 3-fold cross-validation
+rdesc = makeResampleDesc("CV", iters = 3)
+
+r = resample("classif.lda", iris.task, rdesc, models = TRUE)
+r$models
+```
+
+Keeping only certain information instead of entire [models](&WrappedModel), for example the
+variable importance in a regression tree, can be achieved using the ``extract`` argument.
+
+```{r}
+## 3-fold cross-validation
+rdesc = makeResampleDesc("CV", iters = 3)
+
+## Extract the variable importance in a regression tree
+r = resample("regr.rpart", bh.task, rdesc,
+    extract = function(x) x$learner.model$variable.importance)
+r$extract
+```
+
+The function passed to ``extract`` is applied to each [model](&WrappedModel) fitted on one of
+the 3 training sets.
 
 
-## Further information
+## Stratified resampling
 
+For classification ``stratify` ... FIXME
+```{r}
+## 3-fold cross-validation
+rdesc = makeResampleDesc("CV", iters = 3, stratify = TRUE)
+
+r = resample("classif.lda", iris.task, rdesc, models = TRUE)
+r$models
+```
+
+## Resample descriptions and resample instances
+
+--
 Resampling strategies concern the process of sampling new data sets that are
 subsets of the main data set *D*. One wants to generate various training sets
 that the learning method can fit models to and test sets that those models can
 be evaluated on. We assume that every resampling strategy consists of a
 number of iterations and each one defines a set of indices into *D* that determine
-the respective training and test sets. These iterations are implemented by
-storing the index set in a so called
-[ResampleInstance](&makeResampleInstance) object. The reasons for having the
-user create this data explicitly and not just set an option in an R function to
-choose the resampling method are:
+the respective training and test sets.
+--
 
-* It is easier to create paired experiments, where you train and test
-  different methods on exactly the same sets, especially when you want
-  to add another method to a comparison experiment you already did.
+
+As shown above the function [&makeResampleDesc] is used to specify the resampling strategy.
+
+```{r}
+rdesc = makeResampleDesc("CV", iters = 3)
+str(rdesc)
+```
+
+The result ``rdesc``is an object of class [ResampleDesc](&makeResampleDesc) and contains,
+as the name implies, a description of the resampling strategy.
+Basically, this is an instruction for randomly drawing training and test sets including
+the necessary parameters like the number of iterations, the sizes of the training and test
+sets etc.
+
+Based on this description, the data set is randomly separated into multiple training and
+test sets.
+The resulting set of index vectors indicating the training and test examples for each iteration
+is stored in a [ResampleInstance](&makeResampleInstance).
+
+If a [&ResampleDesc] is passed to [&resample] it is instantiated internally.
+It is also possible to pass a [&ResampleInstance] to [&resample].
+
+A resample instance can be created by function [&makeResampleInstance] given a resample
+description and either the size of the data set at hand or the [&Task].
+It basically takes the description object and performs the random
+drawing of indices to separate the data into training and test.
+
+```{r}
+## Create a resample instance based an a task
+rin = makeResampleInstance(rdesc, task = iris.task)
+rin
+
+## Create a resample instance given the size of a data set
+rin = makeResampleInstance(rdesc, size = nrow(iris))
+str(rin)
+
+## Access the indices of the training observations in iteration 3
+rin$train.inds[[3]]
+```
+
+While having all those separate objects, resample descriptions, instances and the resample
+function seems overly complicated, it has several advantages:
+
+* Having resample instances allows for paired experiments, that is comparing the performance
+  of several learners on exactly the same training and test sets.
+  This is particularly useful if you want to add another method to a comparison experiment
+  you already did.
+  ```{r}
+  rdesc = makeResampleDesc("CV", iters = 3)
+  rin = makeResampleInstance(rdesc, task = iris.task)
+  
+  ## Calculate the performance of two learners based on the same resample instance
+  r.lda = resample("classif.lda", iris.task, rin)
+  r.rpart = resample("classif.rpart", iris.task, rin)
+  ```
 * It is easy to add other resampling methods later on. You can
-  simply use S4 inheritance and derive from the [ResampleInstance](&makeResampleInstance)
+  simply derive from the [ResampleInstance](&makeResampleInstance)
   class, but you do not have to touch any methods that use the
   resampling strategy.
 
-![Resampling Figure](../../../images/resampling.png "Resampling Figure")
+FIXME: Sometimes one only wants to describe the drawing process, while in other instances one wants
+to create the specific index sets.
 
+As mentioned above, when calling [&makeResampleInstance] the index sets are drawn randomly.
+Mainly, for *holdout* (test/train) estimation you may want to specify the training and test
+sets manually.
+This can be done using function [&makeFixedHoldoutInstance].
 
-## Resample descriptions and resample instances
-
-There are two types of objects: a [ResampleDesc](&makeResampleDesc) object, which represents
-a resample description, e.g. a 10-fold cross-validation, and a
-[ResampleInstance](&makeResampleInstance)
-object, which creates a resample instance for a specific task based on a resample
-description. These can be generated by means of the factory methods [&makeResampleDesc]
-and [&makeResampleInstance].
-
-For every resampling strategy, there is a description class that inherits
-from [ResampleDesc](&makeResampleDesc) and completely specifies the necessary
-parameters, and a class inheriting from
-[ResampleInstance](&makeResampleInstance).
-This latter class takes the description object and performs the random
-drawing of indices to separate the data into training and test. While this seems
-overly complicated, it is necessary as sometimes one only wants to describe the
-drawing process, while in other instances one wants to create the specific index
-sets. There are convenient methods to make the construction process as
-easy as possible.
-
-```{r eval=FALSE}
-## get the cv.instance directly
-rdesc = makeResampleDesc("CV", iters = 10)
-rinst  = makeResampleInstance(rdesc, size = nrow(iris))
+```{r}
+rin = makeFixedHoldoutInstance(train.inds = 1:100, test.inds = 101:150, size = 150)
+rin
 ```
 
-Asking the [ResampleDesc](&makeResampleDesc) or
-[ResampleInstance](&makeResampleInstance) objects for further information is
-easy, just inspect the list elements by using the $ operator.
 
-```{r eval=FALSE}
-## description object
-## number of iterations
-rdesc$iters
+## Aggregation
 
-## resample.instance object
-## number of iterations
-rinst$desc$iters
+performance values resulting from individual iterations have to be aggregated.
+default mean
 
-rinst$train.inds[[3]]
-rinst$test.inds[[3]]
+Every single resampling
+iteration is handled as described in the explanation above, i.e. you
+train a model on the training part of the data set, predict on the test set
+and compare predicted and true labels to compute some performance
+measure. This is done in every iteration so that you have
+e.g. ten performance values in the case of 10-fold cross-validation.
+The question arises of how to aggregate those values. You can specify
+that explicitly, the default is to use the mean.
+
+For example, a 10-fold cross validation computes 10 values for the chosen
+performance measure.
+The aggregated value is the mean of these 10 numbers.
+**mlr** knows how to handle it because each [&Measure] knows how it is aggregated:
+
+```{r}
+## Mean misclassification error
+mmce$aggr
+
+## Root mean square error
+rmse$aggr 
 ```
 
-Please refer to the help pages of the specific classes for a complete
-list of getters.
+change via function [&setAggregation]
+[&aggregations] for available methods
+
+You can also create a new [&Measure] by using a different aggregation (see [&aggregations]).
+[&setAggregation]
 
 
-## Included resampling strategies
-
-The package comes with a number of predefined strategies.
-
-* 'Subsample' for subsampling,
-* 'Holdout' for holdout (training/test),
-* 'CV' for cross-validation,
-* 'LOO' for leave-one-out,
-* 'StratCV' for stratified cross-validation,
-* 'RepCV' for repeated cross-validation,
-* 'Bootstrap' for out-of-bag bootstrap.
-
-
-
-### Subsampling
-
-In each iteration *i* the data set *D* is randomly partitioned into a
-training and a test set according to a given percentage, e.g. 2/3
-training and 1/3 test set. If there is just one iteration, the strategy
-is commonly called `holdout` or `test sample estimation`.
-
-```{r eval=FALSE}
-rdesc = makeResampleDesc("Subsample", iters = 10, split = 2/3)
-rdesc = makeResampleDesc("Subsample", iters = 1, split = 2/3)
+### Example: Calculating mean and standard deviation of the error rate
+```{r}
+mmce.test.sd = setAggregation(mmce, test.sd)
+r = resample("classif.rpart", iris.task, iris.rin, measures = list(mmce, mmce.test.sd))
+r$aggr
 ```
 
-### k-fold cross-validation
 
-The data set is partitioned into *k* subsets of (approximately) equal size.
-In the *i*-th step of the *k* iterations, the *i*-th subset is
-used as for testing, while the union of the remaining parts forms the training
-set.
+### Example: Calculating the training error
 
-```{r eval=FALSE}
-rdesc = makeResampleDesc("CV", iters = 10)
-```
 
-### Bootstrapping
+### Example: Bootstrap
 
 *B* new data sets *D_1* to *D_B* are drawn from
 *D* with replacement, each of the same size as *D*.
 In the *i*-th iteration *D_i* forms the training set,
-while the remaining elements from *D*, i.e. elements not
+while the remaining elements from *D*, i.e., elements not
 in the training set, form the test set.
-
-```{r eval=FALSE}
-rdesc = makeResampleDesc("Bootstrap", iters = 10)
-```
 
 <!--(
                      |resampling_desc_figure|
@@ -185,113 +288,51 @@ rdesc = makeResampleDesc("Bootstrap", iters = 10)
                      |resampling_nested_resampling_figure|
 )-->
 
-## Evaluation of Predictions after Resampling
+b632 linear combination of the training error and the bootstrap error
+b632+
 
-The [&resample] function evaluates the performance of your learner using
-a certain resampling strategy for a given machine learning task.
+predictions on the training set
+aggregation strategy
 
-When you use a resampling strategy, **mlr** offers the following
-possibilities to evaluate your predictions. Every single resampling
-iteration is handled as described in the explanation above, i.e. you
-train a model on the training part of the data set, predict on the test set
-and compare predicted and true labels to compute some performance
-measure. This is done in every iteration so that you have
-e.g. ten performance values in the case of 10-fold cross-validation.
-The question arises of how to aggregate those values. You can specify
-that explicitly, the default is to use the mean. Let's have a look at an
-example.
-
-
-### Classification example
-
-For the example code, we use the standard ``iris`` data set and compare a
-decision tree and the Linear Discriminant Analysis based on a 3-fold
-cross-validation:
 
 ```{r}
-## Classification task
-task = makeClassifTask(data = iris, target = "Species")
+rdesc = makeResampleDesc("Bootstrap", predict = "both", iters = 10)
+b632.mmce = setAggregation(mmce, b632)
+b632plus.mmce = setAggregation(mmce, b632plus)
+b632.mmce
 
-## Resample instance for Cross-validation
-rdesc = makeResampleDesc("CV", iters = 3)
-rinst = makeResampleInstance(rdesc, task = task)
+r = resample("classif.rpart", iris.task, rdesc,
+    measures = list(mmce, b632.mmce, b632plus.mmce), show.info = FALSE)
+head(r$measures.train)
+r$aggr
 ```
 
-Now, we fit a decision tree for each fold and measure both the mean misclassification
-error ([&mmce]) and the accuracy ([&acc]):
 
+## Convenience functions
+
+**mlr** provides some convenience functions for the frequently used resampling strategies,
+for example [&holdout], [&crossval] or [bootstrap](&bootstrapB632).
 ```{r}
-## Merge learner (lrn), i.e. Decision Tree, classification task (task) and
-## resample instance (rinst)
-lrn = makeLearner("classif.rpart")
-r1 = resample(lrn, task, rinst, list(mmce, acc))
+r = holdout("regr.lm", bh.task, measures = list(mse, msa))
+r = crossval("classif.lda", iris.task, iters = 3, measures = list(mmce, ber))
+r = bootstrapB632()
 ```
 
-Let's set a couple of hyperparameters for rpart:
-
-```{r}
-lrn1 = makeLearner("classif.rpart", minsplit = 10, cp = 0.03)
-r1 = resample(lrn1, task, rinst, list(mmce, acc))
+recommended way is resample, 
+maximal control, resample descs and instances
 
 
-## Second resample for LDA as learner
-lrn2 = makeLearner("classif.lda")
-r2 = resample(lrn2, task, rinst, list(mmce, acc))
+## Pre-defined resample instances
 
-## Let's see how well both classifiers did w.r.t mean misclassification error and accuracy
-r1[c("measures.test","aggr")]
-r2[c("measures.test","aggr")]
-```
+For each of the pre-defined [&Task]s **mlr** provides pre-defined resample instances for
+3-fold cross-validation. 
+These instances are occasionally used in this tutorial.
 
-To see the individual values for each fold on the test set, we can access
-the `measures.test` element of the result list:
-
-```{r}
-r1$measures.test
-```
-
-As you can see above, every fold of the 3-fold cross-validation gives one mean
-misclassification error (in the second column).
-
-The aggregated performance values are stored in the `aggr` list element:
-
-```{r}
-r1$aggr
-```
-
-The latter value is the aggregation, i.e. by default the mean, of the three
-misclassification errors from the table above.
-Getting the single losses is of course possible as well.
-
-### Regression example
-
-Now, we use the ``BostonHousing`` data and compare the results of a neural net
-and a k-nearest neighbour regression using out-of-bag bootstraping.
-
-```{r}
-data(BostonHousing, package = "mlbench")
-
-## Regression task
-task = makeRegrTask(data = BostonHousing, target = "medv")
-
-## Resample instance for bootstraping
-rdesc = makeResampleDesc("Bootstrap", iters = 3)
-rinst = makeResampleInstance(rdesc, task = task)
-
-ms = list(mse, medae)
-
-lrn1 = makeLearner("regr.nnet")
-r1 = resample(lrn1, task, rinst, measures = ms)
-
-## Another resampling for the k-Nearest Neighbor regression
-lrn2 = makeLearner("regr.kknn")
-r2 = resample(lrn2, task, rinst, measures = ms)
-```
-
-Now, we can compare both methods regarding mean squared error ([&mse]) and the
-median of absolute errors ([&medae]):
-
-```{r}
-r1[c("measures.test","aggr")]
-r2[c("measures.test","aggr")]
+```{r echo=FALSE, results="asis"}
+d = data(package = "mlr")
+d = d$results
+df = as.data.frame(d[seq(1,nrow(d),2), c("Item", "Title")])
+names(df)[1] = "Task"
+pandoc.table(df, style = "rmarkdown", split.tables = Inf, split.cells = Inf,
+	justify = c("left", "left"))
 ```
